# ai_podc

./: .env  .gitignore  deploy_hf.py  main.py  pyproject.toml  requirements.txt  setup_env.py
.github/workflows/: deploy.yml
agents/: orchestrator.py  research_agent.py  script_agent copy  script_agent.py  social_agent copy  social_agent.py  tts_agent.py
