[project]
name = "podcast-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.71.0",
    "elevenlabs>=2.18.0",
    "openai>=2.4.0",
    "python-dotenv>=1.1.1",
    "strands-agents>=1.12.0",
    "tavily-python>=0.7.12",
]
